--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+body {
+  width: 1140px;
+  margin: 0 auto;
+  padding-top: 10px;
+  font-size: 14px;
+}
+
+a, div, p, span, h1, h2, h3, h4 {
+  -webkit-transition: all .3s ease 0s;
+  transition: all .3s ease 0s;
+}
+
 .container {
   color: #333;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -12,31 +24,43 @@
 }
 
 .container .siteBar {
+  background: #f4f4f4;
   width: 19%;
   height: 100%;
   overflow: hidden;
-  border: 1px solid #00000020;
-  border-radius: 5px;
 }
 
-.container .siteBar .nav-link a {
-  text-transform: capitalize;
-  text-decoration: none;
-  font-weight: 600;
+.container .siteBar .nav-link {
   color: #333;
+  text-decoration: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 10px;
-  translate: 0.3s;
+  padding: 0 10px;
 }
 
-.container .siteBar .nav-link a:hover {
-  background: #d16262;
-  color: white;
+.container .siteBar .nav-link:hover {
+  color: #cc2121;
+}
+
+.container .siteBar .nav-link span {
+  text-transform: capitalize;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 90%;
+  padding: 10px 0;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.container .siteBar .nav-link:last-child span {
+  border-bottom: none;
 }
 
 .container .r-block {
@@ -52,18 +76,16 @@
 
 .container .filter {
   overflow: hidden;
+  background: #f4f4f4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  border: 1px solid #00000020;
-  border-radius: 5px;
   margin-bottom: 25px;
 }
 
 .container .filter .btn {
   text-transform: capitalize;
   text-decoration: none;
-  font-weight: 600;
   color: #333;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -72,12 +94,11 @@
       -ms-flex-pack: center;
           justify-content: center;
   padding: 10px;
-  translate: 0.3s;
 }
 
 .container .filter .btn:hover {
-  background: #d16262;
-  color: white;
+  color: #cc2121;
+  text-decoration: underline;
 }
 
 .container .content {
@@ -86,39 +107,13 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   width: 100%;
 }
 
-.container .pagination {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.container .pagination-block {
-  padding: 10px 20px;
-  margin-left: 5px;
-  border: 1px solid #00000020;
-  border-radius: 5px;
-}
-
-.container .pagination-block:first-child {
-  margin-left: 0;
-}
-
-.container .pagination-block:hover {
-  cursor: pointer;
-  background: #d16262;
-  color: white;
-}
-
-.container .wrapper {
+.container .content .wrapper {
+  position: relative;
+  font-size: 14px;
+  line-height: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -132,9 +127,89 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 49%;
+  width: calc(25% - 20px);
   margin-bottom: 10px;
+  padding: 10px;
+}
+
+.container .content .wrapper:before {
+  content: " ";
+  position: absolute;
+  z-index: -1;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 46px 0px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  visibility: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.container .content .wrapper:hover:before {
+  opacity: 1;
+  visibility: visible;
+}
+
+.container .content .wrapper p {
+  margin: 0;
+}
+
+.container .content img {
+  width: 100%;
+}
+
+.container .content .title, .container .content .description, .container .content .price, .container .content .count {
+  width: 100%;
+  text-align: left;
+}
+
+.container .content .title {
+  color: #333;
+  text-decoration: none;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.container .content .title:hover {
+  color: #cc2121;
+  text-decoration: underline;
+}
+
+.container .content .description {
+  font-size: 12px;
+  color: #929292;
+}
+
+.container .content .price {
+  font-weight: 600;
+  color: #cc2121;
+}
+
+.container .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .pagination-block {
+  width: 35px;
+  line-height: 34px;
+  text-align: center;
+  margin-left: 5px;
   border: 1px solid #00000020;
-  border-radius: 5px;
+  border-radius: 50%;
+}
+
+.container .pagination-block:first-child {
+  margin-left: 0;
+}
+
+.container .pagination-block:hover {
+  cursor: pointer;
+  background: #cc2121;
+  color: white;
 }
 /*# sourceMappingURL=main.css.map */
