--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,14 @@
+
+$red: #cc2121;
+body {
+  width: 1140px;
+  margin: 0 auto;  
+  padding-top: 10px;
+  font-size: 14px;
+}
+a, div, p, span, h1, h2, h3, h4 {
+  transition: all .3s ease 0s;
+}
 .container  {
   color: #333;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -5,24 +16,30 @@
   flex-wrap: wrap;
   justify-content: space-between;
   .siteBar {
+    background: #f4f4f4;
     width: 19%;
     height: 100%;
     overflow: hidden;
-    border: 1px solid #00000020;
-    border-radius: 5px;
     .nav-link {
-      a {
+      color: #333;
+      text-decoration: none;
+      display: flex;
+      justify-content: center;
+      padding: 0 10px;
+      &:hover {
+        color: $red;
+      }
+      span {
         text-transform: capitalize;
-        text-decoration: none;
-        font-weight: 600;
-        color: #333;
         display: flex;
         justify-content: center;
-        padding: 10px;
-        translate: 0.3s;
-        &:hover {
-          background: #d16262;
-          color: white;
+        width: 90%;
+        padding: 10px 0;
+        border-bottom: 1px solid #e1e1e1;
+      }
+      &:last-child {
+        span {
+          border-bottom: none;
         }
       }
     }
@@ -34,57 +51,103 @@
   }
   .filter {
     overflow: hidden;
+    background: #f4f4f4;
     display: flex;
-    border: 1px solid #00000020;
-    border-radius: 5px;
     margin-bottom: 25px;
     .btn {
       text-transform: capitalize;
       text-decoration: none;
-      font-weight: 600;
       color: #333;
       display: flex;
       justify-content: center;
       padding: 10px;
-      translate: 0.3s;
       &:hover {
-        background: #d16262;
-        color: white;
+        color: $red;
+        text-decoration: underline;
       }
     }
   }
   .content {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     width: 100%;
+    .wrapper {
+      position: relative;
+      font-size: 14px;
+      line-height: 25px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: calc(25% - 20px);
+      margin-bottom: 10px;
+      padding: 10px;
+      &:before {
+        content: " ";
+        position: absolute;
+        z-index: -1;
+        background-color: #fff;
+        box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.1);
+        opacity: 0;
+        visibility: hidden;
+        width: 100%;
+        height: 100%;
+      }
+      &:hover:before {
+        opacity: 1;
+        visibility: visible;
+      }
+      p {
+        margin: 0;
+      }
+    }
+    img {
+      width: 100%;
+    }
+    .title, .description, .price, .count {
+      width: 100%;
+      text-align: left;
+    }
+    .title {
+      color: #333;
+      text-decoration: none;
+      transition: 0.3s;
+      &:hover {
+        color: $red;
+        text-decoration: underline;
+      }
+    }
+    .description {
+      font-size: 12px;
+      color: #929292;
+    }
+    .price {
+      font-weight: 600;
+      color: $red;
+    }
+    .count {
+      
+    }
   }
   .pagination {
     display: flex;
     justify-content: center;
     &-block {
-      padding: 10px 20px;
+      width: 35px;
+      line-height: 34px;
+      text-align: center;
       margin-left: 5px;
       border: 1px solid #00000020;
-      border-radius: 5px;
+      border-radius: 50%;
       &:first-child {
         margin-left: 0;
       }
       &:hover {
         cursor: pointer;
-        background: #d16262;
+        background: $red;
         color: white;
       }
     }
   }
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 49%;
-    margin-bottom: 10px;
-    border: 1px solid #00000020;
-    border-radius: 5px;
-  }
+
 }
