--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,7 +49,7 @@ a, div, p, span, h1, h2, h3, h4 {
     flex-direction: column;
     width: 80%;
   }
-  .filter {
+  .sorting, .filter {
     overflow: hidden;
     background: #f4f4f4;
     display: flex;
@@ -64,6 +64,23 @@ a, div, p, span, h1, h2, h3, h4 {
       &:hover {
         color: $red;
         text-decoration: underline;
+      }
+    }
+  }
+  .filter-wrap {
+    padding: 10px;
+    input {
+      width: 60px;
+      padding: 5px 0 5px 5px;
+    }
+    span {
+      cursor: pointer;
+      background: #fff;
+      height: 30px;
+      padding: 6px 10px;
+      &:hover {
+        background: #000;
+        color: #fff;
       }
     }
   }
