--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
   margin: 0 auto;
   padding-top: 10px;
   font-size: 14px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a,
@@ -19,7 +20,6 @@ h4 {
 
 .container {
   color: #333;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -306,7 +306,7 @@ h4 {
   color: white;
 }
 
-.pagination-block {
+.pagination-block, .pagination-block2 {
   width: 35px;
   line-height: 34px;
   text-align: center;
@@ -315,13 +315,93 @@ h4 {
   border-radius: 50%;
 }
 
-.pagination-block:first-child {
+.pagination-block:first-child, .pagination-block2:first-child {
   margin-left: 0;
 }
 
-.pagination-block:hover {
+.pagination-block:hover, .pagination-block2:hover {
   cursor: pointer;
   background: #cc2121;
   color: white;
+}
+
+.basket {
+  position: relative;
+  font-size: 26px;
+  color: red;
+  width: 30px;
+}
+
+.basket__count {
+  position: absolute;
+  top: 10px;
+  right: 0;
+  font-size: 12px;
+  font-weight: 900;
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: green;
+  color: #fff;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+.basket__count.addProduct {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.basketPage {
+  margin: 10px;
+}
+
+.basketPage img {
+  width: 150px;
+}
+
+.basketPage .title:hover {
+  color: #333;
+  text-decoration: none;
+}
+
+.basketPage__issue {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
+.basketPage__issue form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 50%;
+}
+
+.basketPage__issue input {
+  margin: 10px 0;
+  padding: 5px 15px;
+}
+
+.basketPage__issue .addBasketProduct {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-top: 30px;
 }
 /*# sourceMappingURL=main.css.map */
