--- a/css/main.css
+++ b/css/main.css
@@ -359,11 +359,63 @@ h4 {
 }
 
 .basketPage {
-  margin: 10px;
+  position: relative;
+  width: 25%;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.basketPage img {
-  width: 150px;
+.basketPage.notAdd img, .basketPage.notAdd .block {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  opacity: 0.3;
+}
+
+.basketPage.notAdd input:hover {
+  cursor: initial;
+}
+
+.basketPage.notAdd input:focus {
+  outline: none;
+}
+
+.basketPage__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-weight: 500;
+  margin: 15px;
+}
+
+.basketPage__label:hover {
+  cursor: pointer;
+  color: #cc2121;
+}
+
+.basketPage__label.checked:before {
+  content: none;
+}
+
+.basketPage__label:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+}
+
+.basketPage__checkbox {
+  width: 15px;
+  height: 15px;
 }
 
 .basketPage .title:hover {
