--- a/scss/main.scss
+++ b/scss/main.scss
@@ -288,9 +288,50 @@ h4 {
     }
   }
   &Page {
-    margin: 10px;
-    img {
-      width: 150px;
+    position: relative;
+    width: 25%;
+    padding: 10px;
+    box-sizing: border-box;
+    &.notAdd {
+        img, .block {
+          user-select: none;    
+          opacity: 0.3;
+        }
+        input {
+          &:hover {
+            cursor: initial;
+          }
+          &:focus {
+            outline: none;
+          }
+        }
+    }
+    &__label {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 500;
+      margin: 15px;
+      &:hover {
+        cursor: pointer;
+        color: $red;
+      }
+      &.checked {
+        &:before {
+          content: none;
+        }
+      }
+      &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+      }
+    }
+    &__checkbox {
+      width: 15px;
+      height: 15px;
     }
     .title {
       &:hover {
